# telegram_speech_to_text_bot

./: .bash_profile  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
bot_voice_msg/: converter.py  downloader.py  main.py  punctuation_processor.py  punk_processor.py
