[tool.poetry]
name = "bot-voice-msg"
version = "0.1.0"
description = ""
authors = ["Iana Kasimova <kasimova94yana@gmail.com>"]
readme = "README.md"
packages = [{include = "bot_voice_msg"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.4"
asyncio = "^3.4.3"
librosa = "^0.10.1"
nltk = "^3.8.1"
torch = "^2.0.1"
transformers = "^4.32.1"
datasets = "^2.14.4"
pyctcdecode = "^0.5.0"
kenlm = "^0.2.0"
ffmpeg = "^1.4"
static-ffmpeg = "^2.5"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "bot_voice_msg:main"
